react-project/infrastructure/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nextjs-auth
  labels:
    name: nextjs-auth
    environment: production
