react-project/infrastructure/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-auth-service
  namespace: nextjs-auth
  labels:
    app: nextjs-auth-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: nextjs-auth-app
